--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -23,8 +23,214 @@
    "outputs": [],
    "source": [
     "from Encoding import load\n",
-    "dataset_name = \"Pill_Mono\"\n",
+    "dataset_name = \"2Sphere\"\n",
     "par_data, bc = load(dataset_name,data_type=\"par_data\"), load(dataset_name,data_type=\"bc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "193813be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Encoding import ProjectPointsToCylinder, ProjectPointsToHyperplane, ConstructTopology"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "37769850",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2, 6), (2, 6, 9))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "par_step = par_data[0][0]\n",
+    "bc_step = bc[0]\n",
+    "bc_step[0]+=bc_step[1]\n",
+    "par_step.shape, bc_step.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a4e4f5c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_step = ConstructTopology(par_step,bc_step,tol=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "73514d37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1],\n",
+       "       [ 0, -1],\n",
+       "       [ 0, -2],\n",
+       "       [ 1, -2],\n",
+       "       [ 0, -3],\n",
+       "       [ 1, -4],\n",
+       "       [ 1, -6]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2ac5d2bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P_wall,P_W_particles, P_W_top = [],[],[]\n",
+    "for wall_id,wall in enumerate(bc_step[0]):\n",
+    "    if wall[-1] == 1:\n",
+    "        ProjectionFunction = ProjectPointsToCylinder\n",
+    "    if wall[-1] == 0:\n",
+    "        ProjectionFunction = ProjectPointsToHyperplane\n",
+    "\n",
+    "    P_W_mask = -top_step[:,1]-1==wall_id\n",
+    "    P_W_idx = top_step[P_W_mask]\n",
+    "    P_W_particles_temp = par_step[P_W_idx[:,0],:][:,:3]\n",
+    "    P_wall.append(ProjectionFunction(P_W_particles_temp,wall))\n",
+    "    P_W_particles.append(P_W_particles_temp)\n",
+    "    P_W_top.append(P_W_idx)\n",
+    "\n",
+    "P_wall = np.ndarray.astype(np.concatenate(P_wall),float)\n",
+    "P_W_particles = np.ndarray.astype(np.concatenate(P_W_particles),float)\n",
+    "P_W_top = np.ndarray.astype(np.concatenate(P_W_top),int)\n",
+    "\n",
+    "rel_coord = P_W_particles-P_wall\n",
+    "normal_vectors = rel_coord/np.linalg.norm(rel_coord,axis=1,keepdims=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "P_virtual = np.concatenate((P_wall,\n",
+    "                            np.zeros((P_wall.shape[0],3)),                      \n",
+    "                            normal_vectors,\n",
+    "                            np.zeros((P_wall.shape[0],1))),                      \n",
+    "                            axis=1)\n",
+    "\n",
+    "P_P_top = top_step[top_step[:,1]>=0]\n",
+    "MatlabTopology = np.concatenate([P_P_top,P_W_top],axis=0)\n",
+    "n_new = P_virtual.shape[0]\n",
+    "n_par = par_step.shape[0]\n",
+    "top_enc = MatlabTopology.copy()\n",
+    "top_enc[-n_new:,1] = np.arange(n_par,n_new+n_par,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "dbf54aee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = [1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "35d01ce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "31f2cefc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0, 1],\n",
+       "        [0, 2],\n",
+       "        [0, 3],\n",
+       "        [1, 4],\n",
+       "        [0, 5],\n",
+       "        [1, 6],\n",
+       "        [1, 7]]),\n",
+       " array([[ 0,  1],\n",
+       "        [ 0, -1],\n",
+       "        [ 0, -2],\n",
+       "        [ 1, -2],\n",
+       "        [ 0, -3],\n",
+       "        [ 1, -4],\n",
+       "        [ 1, -6]]))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_enc,MatlabTopology"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e5abc73c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0, -1],\n",
+       "       [ 0, -2],\n",
+       "       [ 1, -2],\n",
+       "       [ 0, -3],\n",
+       "       [ 1, -4],\n",
+       "       [ 1, -6]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P_W_top"
    ]
   },
   {
